initial structure of the form

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parallax Effect</title>
+    <title>WMYM forms</title>
     <!-- style file -->
     <link rel="stylesheet" href="css/style.css">
     <!-- script file -->
@@ -23,6 +23,54 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="container__forms">
+            <div class="forms__sign-in-up">
+                <form action="" class="form__sign-in-form">
+                    <h2 class="form__title">Sign In</h2>
+                    <div class="form__input-field">
+                        <span class="material-icons material-icons-outlined">
+                            perm_identity
+                        </span>
+                        <input type="text" id="user_username" placeholder="Username">
+                    </div>
+                    <div class="form__input-field">
+                        <span class="material-icons material-icons-outlined">
+                            lock
+                        </span>
+                        <input type="password" id="user_password" placeholder="Password">
+                    </div>
+                    <input class="form__login-btn" type="submit" value="Login">
+                    <p class="form__social-text">Or Sign in with</p>
+                    <div class="forms__social-media">
+                        <a href="#" class="forms__social-media_icons">
+                            <span class="material-icons material-icons-outlined">
+                                apple
+                            </span>
+                        </a>
+                        <a href="#" class="forms__social-media_icons">
+                            <span class="material-icons material-icons-outlined">
+                                apple
+                            </span>
+                        </a>
+                        <a href="#" class="forms__social-media_icons">
+                            <span class="material-icons material-icons-outlined">
+                                apple
+                            </span>
+                        </a>
+                        <a href="#" class="forms__social-media_icons">
+                            <span class="material-icons material-icons-outlined">
+                                apple
+                            </span>
+                        </a>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <div class="container__panels">
+        </div>
+    </div>
 </body>
 
 </html>
