put some spaces

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container__forms">
             <div class="forms__sign-in-up">
                 <form action="" class="form__sign-in-form">
-                    <h2 class="form__title">Sign In</h2>
+                    <h2 class="form__title">Sign in</h2>
                     <div class="form__input-field">
                         <span class="material-icons material-icons-outlined">
                             perm_identity
@@ -40,8 +40,11 @@
                         </span>
                         <input type="password" id="user_password" placeholder="Password">
                     </div>
+
                     <input class="form__login-btn" type="submit" value="Login">
+
                     <p class="form__social-text">Or Sign in with</p>
+
                     <div class="forms__social-media">
                         <a href="#" class="forms__social-media_icons">
                             <span class="material-icons material-icons-outlined">
