--- a/index.html
+++ b/index.html
@@ -23,6 +23,41 @@
 </head>
 
 <body>
+    <section id="home" class="home">
+
+        <div class="home__content">
+            <h2>Hello, I am <br>
+                <span>Washington Yandun</span>
+            </h2>
+
+            <div class="animated-text">
+                <h3>Software student</h3>
+                <h3>Art Entusiast</h3>
+                <h3>Self Learner</h3>
+            </div>
+
+            <a href="#" class="btn">See My Work</a>
+
+            <div class="media-icons">
+                <a href="#">
+                    <span class="material-icons material-icons-outlined">
+                        whatsapp
+                    </span>
+                </a>
+                <a href="#">
+                    <span class="material-icons material-icons-outlined">
+                        whatsapp
+                    </span>
+                </a>
+                <a href="#">
+                    <span class="material-icons material-icons-outlined">
+                        whatsapp
+                    </span>
+                </a>
+            </div>
+        </div>
+
+    </section>
 </body>
 
 </html>
