made the navbar, home and bio sections structure

--- a/index.html
+++ b/index.html
@@ -23,40 +23,86 @@
 </head>
 
 <body>
-    <section id="home" class="home">
+    <!-- navbar -->
+    <header id="navbar">
+        <a href="#" class="navbar__logo">WMYM</a>
+        <div class="navbar__links">
+            <a href="home">Home</a>
+            <a href="bio">Bio</a>
+            <a href="about">About</a>
+            <a href="progress">Progress</a>
+            <a href="work">Work</a>
+            <a href="contact">Contact</a>
+        </div>
+    </header>
 
+    <!-- Home -->
+    <section id="home" class="home">
         <div class="home__content">
             <h2>Hello, I am <br>
                 <span>Washington Yandun</span>
             </h2>
 
             <div class="animated-text">
-                <h3>Software student</h3>
-                <h3>Art Entusiast</h3>
-                <h3>Self Learner</h3>
+                <h3>Sw Student</h3>
+                <h3>Art Fan</h3>
+                <h3>Animal Lover</h3>
             </div>
 
             <a href="#" class="btn">See My Work</a>
 
-            <div class="media-icons">
+            <div class="home__media">
                 <a href="#">
-                    <span class="material-icons material-icons-outlined">
+                    <span class="material-icons">
                         whatsapp
                     </span>
                 </a>
                 <a href="#">
-                    <span class="material-icons material-icons-outlined">
-                        whatsapp
+                    <span class="material-icons">
+                        snapchat
                     </span>
                 </a>
                 <a href="#">
-                    <span class="material-icons material-icons-outlined">
-                        whatsapp
+                    <span class="material-icons">
+                        facebook
                     </span>
                 </a>
             </div>
         </div>
+    </section>
 
+    <section class="bio" id="bio">
+        <div class="bio__title">
+            <h2 class="title">Bio</h2>
+        </div>
+
+        <div class="bio__content">
+
+            <div class="col left-col">
+                <div class="bio__card">
+                    <img src="img/logo/me.jpg" alt="Me">
+                </div>
+            </div>
+
+            <div class="col right-col">
+                <h2 class="content-title">
+                    Hey There! I'm Washington
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi ipsam quia iusto deleniti illum
+                    deserunt dolor accusantium alias, omnis, eius odit perspiciatis, exercitationem aliquam quos
+                    mollitia inventore odio excepturi.
+                    <br><br>
+                    Eaque odit temporibus suscipit deleniti nemo accusantium,
+                    consequatur, sapiente harum ut impedit ex aliquid illo vel eum? Totam eveniet alias. Id
+                    architecto officiis, omnis sunt
+                    <br><br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quibusdam, a soluta tempore
+                    doloremque consequatur.
+                </p>
+                <a href="#" class="btn">More</a>
+            </div>
+        </div>
     </section>
 </body>
 
