--- a/index.html
+++ b/index.html
@@ -27,12 +27,10 @@
     <header id="navbar">
         <a href="#" class="navbar__logo">WMYM</a>
         <div class="navbar__links">
-            <a href="home">Home</a>
-            <a href="bio">Bio</a>
-            <a href="about">About</a>
-            <a href="progress">Progress</a>
-            <a href="work">Work</a>
-            <a href="contact">Contact</a>
+            <a href="#home">Home</a>
+            <a href="#bio">Bio</a>
+            <a href="#progress">Progress</a>
+            <a href="#contact">Contact</a>
         </div>
     </header>
 
@@ -101,6 +99,73 @@
                     doloremque consequatur.
                 </p>
                 <a href="#" class="btn">More</a>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="progress">
+        <div class="bio__title">
+            <h2 class="title">
+                Progress
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi optio, dolorum laborum ipsam eos
+                reiciendis excepturi! Impedit dolores animi corporis quis adipisci? Accusantium distinctio asperiores
+                deleniti unde, ab necessitatibus voluptate quibusdam. Velit vero voluptate eligendi inventore,
+                necessitatibus soluta saepe tempore, reprehenderit amet placeat, fugiat ipsam molestias ipsum pariatur
+                assumenda odit! <br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea deleniti at ut odit
+                consequatur a voluptas error eligendi explicabo cupiditate?
+            </p>
+        </div>
+        <div class="content">
+            <div class="card">
+                <div class="progress-icon">
+                    <span class="material-icons">
+                        visibility
+                    </span>
+                </div>
+                <div class="info">
+                    <h3>
+                        Progress 1
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    </p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="progress-icon">
+                    <span class="material-icons">
+                        visibility
+                    </span>
+                </div>
+                <div class="info">
+                    <h3>
+                        Progress 2
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    </p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="progress-icon">
+                    <span class="material-icons">
+                        visibility
+                    </span>
+                </div>
+                <div class="info">
+                    <h3>
+                        Progress 3
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
