made the contact strucutre

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </div>
     </header>
 
+
     <!-- Home -->
     <section id="home" class="home">
         <div class="home__content">
@@ -69,6 +70,8 @@
         </div>
     </section>
 
+
+    <!-- bio -->
     <section class="bio" id="bio">
         <div class="bio__title">
             <h2 class="title">Bio</h2>
@@ -104,6 +107,7 @@
     </section>
 
 
+    <!-- progress -->
     <section id="progress">
         <div class="bio__title">
             <h2 class="title">
@@ -120,7 +124,7 @@
             </p>
         </div>
         <div class="content">
-            <div class="card">
+            <a class="card" href="/html/progress1.html">
                 <div class="progress-icon">
                     <span class="material-icons">
                         visibility
@@ -128,15 +132,15 @@
                 </div>
                 <div class="info">
                     <h3>
-                        Progress 1
+                        I
                     </h3>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     </p>
                 </div>
-            </div>
+            </a>
 
-            <div class="card">
+            <a class="card" href="/html/progress2.html">
                 <div class="progress-icon">
                     <span class="material-icons">
                         visibility
@@ -144,15 +148,15 @@
                 </div>
                 <div class="info">
                     <h3>
-                        Progress 2
+                        II
                     </h3>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     </p>
                 </div>
-            </div>
+            </a>
 
-            <div class="card">
+            <a class="card" href="/html/progress3.html">
                 <div class="progress-icon">
                     <span class="material-icons">
                         visibility
@@ -160,11 +164,91 @@
                 </div>
                 <div class="info">
                     <h3>
-                        Progress 3
+                        III
                     </h3>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     </p>
+                </div>
+            </a>
+        </div>
+    </section>
+
+
+    <!-- contact -->
+    <section class="contact" id="contact">
+        <div class="bio__title">
+            <h2 class="title">
+                Contact Me
+            </h2>
+        </div>
+
+        <div class="content">
+            <div class="row">
+
+                <div class="card">
+                    <div class="contact-icon">
+                        <span class="material-icons">
+                            place
+                        </span>
+                    </div>
+                    <div class="info">
+                        <h3>Location</h3>
+                        <span>Quito, Ecuador</span>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="contact-icon">
+                        <span class="material-icons">
+                            contact_mail
+                        </span>
+                    </div>
+                    <div class="info">
+                        <h3>E-Mail</h3>
+                        <a href="mailto: abc@example.com">
+                            W. Yandun
+                        </a>
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <div class="contact-icon">
+                        <span class="material-icons">
+                            contact_page
+                        </span>
+                    </div>
+                    <div class="info">
+                        <h3>GitHub</h3>
+                        <span><a href="https://github.com/WashingtonYandun">@WashingtonYandun</a></span>
+                    </div>
+                </div>
+
+
+                <div class="row">
+                    <div class="contact_form">
+                        <h3>
+                            Send me a message
+                        </h3>
+
+                        <div class="contact_input-box">
+                            <input type="text" name="" id="userName" placeholder="name">
+                        </div>
+
+                        <div class="contact_input-box">
+                            <input type="text" name="" id="userEmail" placeholder="Email">
+                        </div>
+
+                        <div class="contact_input-box">
+                            <textarea name="" id="userText" cols="80" rows="8" placeholder="Write here..."></textarea>
+                        </div>
+
+                        <div class="contact_input-box">
+                            <input type="submit" value="Send" class="send-btn">
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
