made the contact form and the footer sections

--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
                     </div>
                 </div>
 
+
                 <div class="card">
                     <div class="contact-icon">
                         <span class="material-icons">
@@ -226,14 +227,15 @@
                 </div>
 
 
+                <!-- contact form -->
                 <div class="row">
-                    <div class="contact_form">
+                    <div class="contact-form">
                         <h3>
                             Send me a message
                         </h3>
 
                         <div class="contact_input-box">
-                            <input type="text" name="" id="userName" placeholder="name">
+                            <input type="text" name="" id="userName" placeholder="Name">
                         </div>
 
                         <div class="contact_input-box">
@@ -253,6 +255,15 @@
             </div>
         </div>
     </section>
+
+
+    <!-- footer -->
+    <footer class="footer" id="footer">
+        <span class="footer-title">
+            WMYM
+        </span>
+        <a href="https://github.com/WashingtonYandun/Art-Human-Expression-Communication_Portfolio">Art Portfolio</a>
+    </footer>
 </body>
 
 </html>
