responsive nav bar done, working on the hamburguer menu

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
 <body>
     <!-- navbar -->
     <header id="navbar">
-        <a href="#" class="navbar__logo">WMYM</a>
+        <a href="#home" class="navbar__logo">WMYM</a>
+        <div class="ham-menu" id="ham-menu">
+            <span class="material-icons" id="ham-icon">
+                menu
+            </span>
+        </div>
         <div class="navbar__links">
             <a href="#home">Home</a>
             <a href="#bio">Bio</a>
@@ -124,7 +129,7 @@
             </p>
         </div>
         <div class="content">
-            <a class="card" href="/html/progress1.html">
+            <a class="card" href="/html/progress1.html" target="_blank">
                 <div class="progress-icon">
                     <span class="material-icons">
                         visibility
@@ -140,7 +145,7 @@
                 </div>
             </a>
 
-            <a class="card" href="/html/progress2.html">
+            <a class="card" href="/html/progress2.html" target="_blank">
                 <div class="progress-icon">
                     <span class="material-icons">
                         visibility
@@ -156,7 +161,7 @@
                 </div>
             </a>
 
-            <a class="card" href="/html/progress3.html">
+            <a class="card" href="/html/progress3.html" target="_blank">
                 <div class="progress-icon">
                     <span class="material-icons">
                         visibility
@@ -222,7 +227,7 @@
                     </div>
                     <div class="info">
                         <h3>GitHub</h3>
-                        <span><a href="https://github.com/WashingtonYandun">@WashingtonYandun</a></span>
+                        <span><a href="https://github.com/WashingtonYandun" target="_blank">@WashingtonYandun</a></span>
                     </div>
                 </div>
 
@@ -262,7 +267,8 @@
         <span class="footer-title">
             WMYM
         </span>
-        <a href="https://github.com/WashingtonYandun/Art-Human-Expression-Communication_Portfolio">Art Portfolio</a>
+        <a href="https://github.com/WashingtonYandun/Art-Human-Expression-Communication_Portfolio" target="_blank">Art
+            Portfolio</a>
     </footer>
 </body>
 
