fully responsive homepage, add the real text on the html

--- a/html/progress1.html
+++ b/html/progress1.html
@@ -9,7 +9,7 @@
     <!-- script file -->
     <script src="js/script.js" defer></script>
     <!-- style file -->
-    <link rel="stylesheet" href="css/progress.css">
+    <link rel="stylesheet" href="/css/progress.css">
     <!-- google fonts api -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,9 +23,24 @@
 </head>
 
 <body>
-    <h1>
-        NO WORK FOR NOW
-    </h1>
+    <!-- navbar -->
+    <header id="navbar">
+        <a href="#home" class="navbar__logo">WMYM</a>
+        <div class="ham-menu" id="ham-menu">
+            <span class="material-icons" id="ham-icon">
+                menu
+            </span>
+        </div>
+        <div class="navbar__links">
+            <a href="#home">Home</a>
+            <a href="#bio">Bio</a>
+            <a href="#progress">Progress</a>
+            <a href="#contact">Contact</a>
+        </div>
+    </header>
+
+    <!-- introduction -->
+
 </body>
 
 </html>
