--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h3>Animal Lover</h3>
             </div>
 
-            <a href="#" class="btn">See My Work</a>
+            <a href="https://github.com/WashingtonYandun" class="btn" target="_blank">See My Tech Work</a>
 
             <div class="home__media">
                 <a href="#">
@@ -95,18 +95,20 @@
                     Hey There! I'm Washington
                 </h2>
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi ipsam quia iusto deleniti illum
-                    deserunt dolor accusantium alias, omnis, eius odit perspiciatis, exercitationem aliquam quos
-                    mollitia inventore odio excepturi.
                     <br><br>
-                    Eaque odit temporibus suscipit deleniti nemo accusantium,
-                    consequatur, sapiente harum ut impedit ex aliquid illo vel eum? Totam eveniet alias. Id
-                    architecto officiis, omnis sunt
+                    My name is Washington Yandun, am a software engineering student. I always love tech and science
+                    thats why decided to study something related to that.
+                    Another fact of me is that i enjoy art, specially if it is made
+                    with a bit of tech o
+                    coding. There is a part of software engineering wich i like so bad. Its called Generative Art. It
+                    merge art and
+                    programming so im working on it. Also i love math, AI , music and videogames (make and play them).
                     <br><br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quibusdam, a soluta tempore
-                    doloremque consequatur.
+                    I live in
+                    the north of Quito,
+                    Ecuador with my family.
                 </p>
-                <a href="#" class="btn">More</a>
+                <a href="#progress" class="btn">More</a>
             </div>
         </div>
     </section>
@@ -119,13 +121,12 @@
                 Progress
             </h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi optio, dolorum laborum ipsam eos
-                reiciendis excepturi! Impedit dolores animi corporis quis adipisci? Accusantium distinctio asperiores
-                deleniti unde, ab necessitatibus voluptate quibusdam. Velit vero voluptate eligendi inventore,
-                necessitatibus soluta saepe tempore, reprehenderit amet placeat, fugiat ipsam molestias ipsum pariatur
-                assumenda odit! <br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea deleniti at ut odit
-                consequatur a voluptas error eligendi explicabo cupiditate?
+                In this section i want to show you all you all the work i are making in Art Human Expression and
+                communication subject.
+                I divided the entire semester in 3 parts, we call each part "Progress" (Progreso)<br>
+                For now there is nothing in the progress two (II) and three (III) because we are in the progress one (I)
+                at the moment.<br>
+                I am going to upload all we do in those sections by the time.
             </p>
         </div>
         <div class="content">
