made the galey p1 and the w1 page

--- a/html/progress1.html
+++ b/html/progress1.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Progress 1 WMYM</title>
+    <title>P.I</title>
     <!-- script file -->
-    <script src="js/script.js" defer></script>
+    <script src="/js/script.js" defer></script>
     <!-- style file -->
-    <link rel="stylesheet" href="/css/progress.css">
+    <link rel="stylesheet" href="/css/style.css">
     <!-- google fonts api -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,14 +32,45 @@
             </span>
         </div>
         <div class="navbar__links">
-            <a href="#home">Home</a>
-            <a href="#bio">Bio</a>
-            <a href="#progress">Progress</a>
-            <a href="#contact">Contact</a>
+            <a href="/index.html">Home</a>
+            <a href="/html/progress1.html">P.II</a>
+            <a href="/html/progress1.html">P.III</a>
         </div>
     </header>
 
-    <!-- introduction -->
+
+    <!-- galery -->
+    <div class="galery-row">
+        <div class="column">
+            <a href="/html/p1/w1.html" class="pics"><img src="/img/artdev/progress1/w1_disorder.jpg" alt=""></a>
+            <a href="/html/p1/w1.html" class="pics"><img src="/img/artdev/progress1/w1_video.jpg" alt=""></a>
+        </div>
+
+        <div class="column">
+            <a href="/html/p1/w2.html" class="pics"><img src="/img/artdev/progress1/w2_classPic.jpg" alt=""></a>
+            <a href="/html/p1/w2.html" class="pics"><img src="/img/artdev/progress1/w2_hearPhones.jpg" alt=""></a>
+        </div>
+
+        <div class="column">
+            <a href="/html/p1/w3.html" class="pics"><img src="/img/artdev/progress1/w3_videoSummary.jpg" alt=""></a>
+            <a href="/html/p1/w3.html" class="pics"><img src="/img/artdev/progress1/w3_question.jpg" alt=""></a>
+        </div>
+
+        <div class="column">
+            <a href="/html/p1/w4.html" class="pics"><img src="/img/artdev/progress1/w4_video.jpg" alt=""></a>
+            <a href="/html/p1/w4.html" class="pics"><img src="/img/artdev/progress1/w4_pic.jpg" alt=""></a>
+            <a href="/html/p1/w4.html" class="pics"><img src="/img/artdev/progress1/w4_oralPresentation.jpg" alt=""></a>
+        </div>
+    </div>
+
+    <!-- footer -->
+    <footer class="footer" id="footer">
+        <span class="footer-title">
+            WMYM
+        </span>
+        <a href="https://github.com/WashingtonYandun/Art-Human-Expression-Communication_Portfolio" target="_blank">Art
+            Portfolio</a>
+    </footer>
 
 </body>
 
