made titles for each week, also added a week (5)

--- a/html/p1/w1.html
+++ b/html/p1/w1.html
@@ -40,6 +40,10 @@
 
     <!-- act1 -->
     <section class="bio" id="bio">
+        <div class="bio__title">
+            <h2 class="title">Week 1</h2>
+        </div>
+
         <div class="bio__content">
 
             <div class="col left-col">
