--- a/html/progress1.html
+++ b/html/progress1.html
@@ -58,8 +58,14 @@
 
         <div class="column">
             <a href="/html/p1/w4.html" class="pics"><img src="/img/artdev/progress1/w4_video.jpg" alt=""></a>
-            <a href="/html/p1/w4.html" class="pics"><img src="/img/artdev/progress1/w4_pic.jpg" alt=""></a>
+            <a href="/html/p1/w4.html" class="pics"><img src="/img/artdev/progress1/w4_questions.jpg" alt=""></a>
             <a href="/html/p1/w4.html" class="pics"><img src="/img/artdev/progress1/w4_oralPresentation.jpg" alt=""></a>
+        </div>
+
+        <div class="column">
+            <a href="/html/p1/w5.html" class="pics"><img src="/img/artdev/progress1/w5_summary.jpg" alt=""></a>
+            <a href="/html/p1/w5.html" class="pics"><img src="/img/artdev/progress1/w5_project.jpg" alt=""></a>
+            <a href="/html/p1/w5.html" class="pics"><img src="/img/artdev/progress1/w5_soundImg.jpg" alt=""></a>
         </div>
     </div>
 
