--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
                 I divided the entire semester in 3 parts, we call each part "Progress" (Progreso)<br>
                 For now there is nothing in the progress two (II) and three (III) because we are in the progress one (I)
                 at the moment.<br>
-                I am going to upload all we do in those sections by the time.
+                I am going to upload all we do in those sections by the time. I really apreciate the Art subjects in
+                collegue so am exited by doing this.
             </p>
         </div>
         <div class="content">
@@ -141,7 +142,7 @@
                         I
                     </h3>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                        Progress I. 5 weeks.
                     </p>
                 </div>
             </a>
@@ -157,7 +158,7 @@
                         II
                     </h3>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                        Progress I. 4 weeks.
                     </p>
                 </div>
             </a>
@@ -173,7 +174,7 @@
                         III
                     </h3>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                        Progress I. 4 weeks.
                     </p>
                 </div>
             </a>
