--- a/html/p1/w2.html
+++ b/html/p1/w2.html
@@ -40,6 +40,9 @@
 
     <!-- act1 -->
     <section class="bio" id="bio">
+        <div class="bio__title">
+            <h2 class="title">Week 2</h2>
+        </div>
         <div class="bio__content">
 
             <div class="col left-col">
