order all weeks and change colors

--- a/html/p1/w1.html
+++ b/html/p1/w1.html
@@ -25,7 +25,7 @@
 <body>
     <!-- navbar -->
     <header id="navbar">
-        <a href="#home" class="navbar__logo">WMYM</a>
+        <a href="/index.html" class="navbar__logo">WMYM</a>
         <div class="ham-menu" id="ham-menu">
             <span class="material-icons" id="ham-icon">
                 menu
