--- a/html/p1/w2.html
+++ b/html/p1/w2.html
@@ -25,7 +25,7 @@
 <body>
     <!-- navbar -->
     <header id="navbar">
-        <a href="#home" class="navbar__logo">WMYM</a>
+        <a href="/index.html" class="navbar__logo">WMYM</a>
         <div class="ham-menu" id="ham-menu">
             <span class="material-icons" id="ham-icon">
                 menu
@@ -47,7 +47,7 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="/img/artdev/progress1/w1_disorder.jpg" alt="My head disorder">
+                    <img src="/img/artdev/progress1/w2_udla.jpeg" alt="My head disorder">
                 </div>
             </div>
 
@@ -80,7 +80,7 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="/img/artdev/progress1/w1_video.jpg" alt="Me">
+                    <img src="/img/artdev/progress1/w2_hearPhones.jpg" alt="Me">
                 </div>
             </div>
 
