--- a/html/p1/w4.html
+++ b/html/p1/w4.html
@@ -25,7 +25,7 @@
 <body>
     <!-- navbar -->
     <header id="navbar">
-        <a href="#home" class="navbar__logo">WMYM</a>
+        <a href="/index.html" class="navbar__logo">WMYM</a>
         <div class="ham-menu" id="ham-menu">
             <span class="material-icons" id="ham-icon">
                 menu
@@ -47,7 +47,7 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="/img/artdev/progress1/w1_disorder.jpg" alt="My head disorder">
+                    <img src="/img/artdev/progress1/w4_video.jpg" alt="My head disorder">
                 </div>
             </div>
 
@@ -80,7 +80,40 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="/img/artdev/progress1/w1_video.jpg" alt="Me">
+                    <img src="/img/artdev/progress1/w4_questions.jpg" alt="Me">
+                </div>
+            </div>
+
+            <div class="col right-col">
+                <h2 class="content-title">
+                    Hey There! I'm Washington
+                </h2>
+                <p>
+                    <br><br>
+                    My name is Washington Yandun, am a software engineering student. I always love tech and science
+                    thats why decided to study something related to that.
+                    Another fact of me is that i enjoy art, specially if it is made
+                    with a bit of tech o
+                    coding. There is a part of software engineering wich i like so bad. Its called Generative Art. It
+                    merge art and
+                    programming so im working on it. Also i love math, AI , music and videogames (make and play them).
+                    <br><br>
+                    I live in
+                    the north of Quito,
+                    Ecuador with my family.
+                </p>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- act 3 -->
+    <section class="bio" id="bio">
+        <div class="bio__content">
+
+            <div class="col left-col">
+                <div class="bio__card">
+                    <img src="/img/artdev/progress1/w4_oralPresentation.jpg" alt="Me">
                 </div>
             </div>
 
