--- a/html/progress2.html
+++ b/html/progress2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P.I</title>
+    <title>P.II</title>
     <!-- script file -->
     <script src="/js/script.js" defer></script>
     <!-- style file -->
@@ -33,8 +33,8 @@
         </div>
         <div class="navbar__links">
             <a href="/index.html">Home</a>
-            <a href="/html/progress1.html">P.II</a>
-            <a href="/html/progress1.html">P.III</a>
+            <a href="/html/progress1.html">P.I</a>
+            <a href="/html/progress3.html">P.III</a>
         </div>
     </header>
 
